--- a/AUTHORS
+++ b/AUTHORS
@@ -94,3 +94,4 @@ For 0.3:
 --------
 * dAnjou <https://launchpad.net/~danjou> (no email provided)
 * Paul Kishimoto <mail@paul.kishimoto.name>
+* Wolter Hellmund <wolterh6@gmail.com>
