--- a/po/ru.po
+++ b/po/ru.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-02-15 10:46+0100\n"
-"PO-Revision-Date: 2012-02-19 07:08+0000\n"
+"PO-Revision-Date: 2012-03-04 04:26+0000\n"
 "Last-Translator: DmDr <cardioexp@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -16,8 +16,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2012-02-20 05:41+0000\n"
-"X-Generator: Launchpad (build 14833)\n"
+"X-Launchpad-Export-Date: 2012-03-04 05:00+0000\n"
+"X-Generator: Launchpad (build 14886)\n"
 
 #: GTG/plugins/notification_area/notification_area.py:120
 msgid "_View Main Window"
@@ -277,6 +277,11 @@ msgid ""
 "Note: This product uses the Remember The Milk API but is not endorsed or "
 "certified by Remember The Milk"
 msgstr ""
+"Синхронизация задач с веб-сервисом RememberTheMilk:\n"
+"\t\thttp://rememberthemilk.com\n"
+"\n"
+"Внимание! Используется API сервиса Remember The Milk без одобрения или "
+"сертификации самим Remember The Milk"
 
 #: GTG/backends/backend_twitter.py:54
 msgid "Twitter"
@@ -297,10 +302,13 @@ msgid ""
 "tag it with the tag you have chosen (you'll configure it later), and it will "
 "appear in GTG."
 msgstr ""
+"Синхронизация всех или части заметок Tomboy с GTG. Пометьте заметки Tomboy, "
+"котороые нужно синхронизировать с GTG, какой-нибудь меткой (её настроим "
+"позже), и они будут видны в GTG."
 
 #: GTG/backends/backend_mantis.py:42
 msgid "MantisBT"
-msgstr ""
+msgstr "MantisBT"
 
 #: GTG/backends/backend_mantis.py:46
 msgid ""
@@ -710,7 +718,7 @@ msgstr ""
 
 #: GTG/core/search.py:86
 msgid "not"
-msgstr ""
+msgstr "нет"
 
 #: GTG/core/search.py:87
 msgid "or"
@@ -874,7 +882,7 @@ msgstr[2] " минут"
 
 #: GTG/gtk/backends_dialog/addpanel.py:75
 msgid "Select a backend:"
-msgstr ""
+msgstr "Выберите хранилище"
 
 #: GTG/gtk/backends_dialog/addpanel.py:179
 msgid "Syncing is <span color=\"red\">disabled</span>"
@@ -890,7 +898,7 @@ msgstr[2] "Авторы"
 #: GTG/gtk/backends_dialog/__init__.py:287
 #, python-format
 msgid "Do you really want to remove the backend '%s'?"
-msgstr ""
+msgstr "Вы действительно хотите отключить это хранилище: '%s'?"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:162
 msgid "Ready to start syncing"
@@ -927,7 +935,7 @@ msgstr "Разрешить синхронизацию"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:192
 msgid "This is the default backend"
-msgstr ""
+msgstr "Это - хранилище по умолчанию"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:195
 msgid "Syncing is enabled."
@@ -996,24 +1004,28 @@ msgid_plural ""
 "Deleting a task cannot be undone, and will delete the following tasks: "
 msgstr[0] "Удаление задачи нельзя отменить! Будет удалена и задача: "
 msgstr[1] "Удаление задачи нельзя отменить! Будут удалены и другие задачи: "
+msgstr[2] "Удаление задачи нельзя отменить! Будут удалены и другие задачи: "
 
 #: GTG/gtk/delete_dialog.py:95
 msgid "Are you sure you want to delete this task?"
 msgid_plural "Are you sure you want to delete these tasks?"
 msgstr[0] "Вы уверены, что хотите удалить эту задачу?"
 msgstr[1] "Вы уверены, что хотите удалить эти задачи?"
+msgstr[2] "Вы уверены, что хотите удалить эти задачи?"
 
 #: GTG/gtk/delete_dialog.py:101
 msgid "Keep selected task"
 msgid_plural "Keep selected tasks"
-msgstr[0] "Сохранить эту задачу"
-msgstr[1] "Сохранить эти задачи"
+msgstr[0] "Оставить эту задачу"
+msgstr[1] "Оставить эти задачи"
+msgstr[2] "Оставить эти задачи"
 
 #: GTG/gtk/delete_dialog.py:104
 msgid "Permanently remove task"
 msgid_plural "Permanently remove tasks"
 msgstr[0] "Удалить задачу навсегда"
 msgstr[1] "Удалить задачи навсегда"
+msgstr[2] "Удалить задачи навсегда"
 
 #: GTG/gtk/delete_dialog.py:115
 #, python-format
@@ -1034,11 +1046,13 @@ msgid ""
 "The <b>%s</b> backend cannot login with the supplied authentication data and "
 "has been disabled. To retry the login, re-enable the backend."
 msgstr ""
+"Вход в хранилище <b>%s</b> не удался: данные для аутентификации не верны. "
+"Для новой попытки входа отключите и вновь включите это хранилище."
 
 #: GTG/gtk/browser/custominfobar.py:40
 #, python-format
 msgid "Due to a network problem, I cannot contact the <b>%s</b> backend."
-msgstr ""
+msgstr "Из-за проблем с сетью доступ к хранилищу <b>%s</b> не возможнен."
 
 #: GTG/gtk/browser/custominfobar.py:43
 #, python-format
@@ -1047,7 +1061,7 @@ msgstr ""
 
 #: GTG/gtk/browser/custominfobar.py:105
 msgid "Configure backend"
-msgstr "Настроить интерфейс"
+msgstr "Настроить хранилище"
 
 #: GTG/gtk/browser/custominfobar.py:106
 msgid "Ignore"
@@ -1100,11 +1114,11 @@ msgstr[2] "%(tasks)d активных задач"
 
 #: GTG/gtk/browser/browser.py:1663
 msgid "Add Task"
-msgstr ""
+msgstr "Добавить задачу"
 
 #: GTG/gtk/browser/browser.py:1664
 msgid "Open Task"
-msgstr ""
+msgstr "Открыть задачу"
 
 #: GTG/gtk/browser/__init__.py:34 GTG/gtk/editor/__init__.py:31
 msgid "Mark as done"
@@ -1165,11 +1179,11 @@ msgstr "Показывать эту метку в рабочем плане"
 
 #: GTG/gtk/browser/__init__.py:49
 msgid "You can create, open or filter your tasks here"
-msgstr ""
+msgstr "Тут можно создавать, открывать или фильтровать свои задачи."
 
 #: GTG/gtk/browser/__init__.py:50
 msgid "Clear"
-msgstr ""
+msgstr "Очистить"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:1
 msgid ""
@@ -1209,7 +1223,7 @@ msgstr "Отменить"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:10
 msgid "Copyrights© 2008, 2009 Lionel Dricot, Bertrand Rousseau"
-msgstr ""
+msgstr "Copyrights© 2008, 2009 Lionel Dricot, Bertrand Rousseau"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:12
 msgid "D_ismiss"
