my local commit

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -182,3 +182,6 @@
 
 2009-03-01 Getting Things Gnome! 0.0.9rc1
 	* First official release 0.1rc1
+
+2012-03-15 Getting Things Gnome! 0.3
+	*Bug #539037 fixed
