--- a/po/eu.po
+++ b/po/eu.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-03-05 10:48+0100\n"
-"PO-Revision-Date: 2010-03-12 09:54+0000\n"
-"Last-Translator: Oier Mees <Unknown>\n"
+"PO-Revision-Date: 2012-03-18 20:32+0000\n"
+"Last-Translator: Asier Iturralde Sarasola <Unknown>\n"
 "Language-Team: Basque <eu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2012-03-06 04:49+0000\n"
-"X-Generator: Launchpad (build 14900)\n"
+"X-Launchpad-Export-Date: 2012-03-19 04:41+0000\n"
+"X-Generator: Launchpad (build 14969)\n"
 
 #: GTG/plugins/notification_area/notification_area.py:120
 msgid "_View Main Window"
@@ -220,7 +220,7 @@ msgstr "Orain"
 #: GTG/tests/test_dates.py:52 GTG/tests/test_dates.py:59 GTG/core/search.py:93
 #: GTG/tools/dates.py:39 GTG/tools/dates.py:48
 msgid "soon"
-msgstr "Laister"
+msgstr "laster"
 
 #: GTG/tests/test_dates.py:53 GTG/tools/dates.py:50
 msgid "later"
@@ -1288,7 +1288,7 @@ msgstr ""
 
 #: GTG/gtk/browser/taskbrowser.glade.h:59
 msgid "_soon"
-msgstr ""
+msgstr "_laster"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:60
 msgid "_tomorrow"
@@ -1400,7 +1400,7 @@ msgstr ""
 
 #: GTG/gtk/editor/taskeditor.glade.h:10
 msgid "Soon"
-msgstr "Laister"
+msgstr "Laster"
 
 #: GTG/gtk/editor/taskeditor.glade.h:11
 msgid "Starting on"
