--- a/AUTHORS
+++ b/AUTHORS
@@ -97,3 +97,4 @@ For 0.3:
 * Wolter Hellmund <wolterh6@gmail.com>
 * huxuan <i@huxuan.org>
 * Nimit Shah <nimit.svnit@gmail.com>
+* Abdul Rauf <abdulraufhaseeb@gmail.com>
