Fixed links opening while trying to select them

--- a/AUTHORS
+++ b/AUTHORS
@@ -98,3 +98,4 @@ For 0.3:
 * huxuan <i@huxuan.org>
 * Nimit Shah <nimit.svnit@gmail.com>
 * Abdul Rauf <abdulraufhaseeb@gmail.com>
+* Steve Scheel <nmu.sscheel@gmail.com>
