--- a/po/sk.po
+++ b/po/sk.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-03-27 00:43+0200\n"
-"PO-Revision-Date: 2011-08-15 18:59+0000\n"
-"Last-Translator: Slavko <Unknown>\n"
+"PO-Revision-Date: 2012-03-27 08:19+0000\n"
+"Last-Translator: Izidor Matušov <izidor.matusov@gmail.com>\n"
 "Language-Team: Slovak <nomail>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 1 : (n>=2 && n<=4) ? 2 : 0;\n"
-"X-Launchpad-Export-Date: 2012-03-27 04:53+0000\n"
-"X-Generator: Launchpad (build 15011)\n"
+"X-Launchpad-Export-Date: 2012-03-28 04:46+0000\n"
+"X-Generator: Launchpad (build 15027)\n"
 
 #: GTG/plugins/notification_area/notification_area.py:121
 msgid "_View Main Window"
@@ -894,8 +894,9 @@ msgstr ""
 #, python-format
 msgid "Syncing your only task"
 msgid_plural "Syncing all %d tasks"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Synchronizujem jedinú úlohu"
+msgstr[1] "Synchroizujem všetky %d úlohy"
+msgstr[2] "Synchronizujm všetkých %d úloh"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:169
 #, python-format
