Launchpad automatic translations update.

--- a/po/ru.po
+++ b/po/ru.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-03-27 00:43+0200\n"
-"PO-Revision-Date: 2012-03-29 19:26+0000\n"
+"PO-Revision-Date: 2012-03-30 18:56+0000\n"
 "Last-Translator: DmDr <cardioexp@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2012-03-30 04:34+0000\n"
+"X-Launchpad-Export-Date: 2012-03-31 05:09+0000\n"
 "X-Generator: Launchpad (build 15032)\n"
 
 #: GTG/plugins/notification_area/notification_area.py:121
@@ -37,14 +37,14 @@ msgstr "Шаблон текстового списка задач."
 
 #: GTG/plugins/export/export_templates/description_simple.py:18
 msgid "A simple Web page that can be easily printed."
-msgstr "Простая web-страница, удобная для печати"
+msgstr "Простая web-страница, удобная для печати."
 
 #: GTG/plugins/export/export_templates/description_simple.py:19
 msgid ""
 "A template to create a simple HTML page with some tasks that can be easily "
 "printed."
 msgstr ""
-"Шаблон простой HTML страницы с несколькими задачами для удобной распечатки"
+"Шаблон простой HTML страницы с несколькими задачами для удобной распечатки."
 
 #: GTG/plugins/export/export_templates/description_statusrpt.py:18
 msgid "Status report"
