Empty window bug fixed

--- a/AUTHORS
+++ b/AUTHORS
@@ -102,3 +102,4 @@ For 0.3:
 * Steve Scheel <nmu.sscheel@gmail.com>
 * Anant Gupta <anant718@hotmail.com>
 * Marta Maria Casetti <mmcasetti@gmail.com>
+* Saurabh Anand <saurabhanandiit@gmail.com>
