--- a/po/it.po
+++ b/po/it.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-03-27 00:43+0200\n"
-"PO-Revision-Date: 2011-11-28 16:10+0000\n"
-"Last-Translator: Claudio Arseni <claudio.arseni@gmail.com>\n"
+"PO-Revision-Date: 2012-04-01 17:22+0000\n"
+"Last-Translator: Radina Matic <radina.matic@gmail.com>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2012-03-27 04:53+0000\n"
-"X-Generator: Launchpad (build 15011)\n"
+"X-Launchpad-Export-Date: 2012-04-02 04:38+0000\n"
+"X-Generator: Launchpad (build 15032)\n"
 
 #: GTG/plugins/notification_area/notification_area.py:121
 msgid "_View Main Window"
@@ -36,13 +36,15 @@ msgstr "Un modello per creare un semplice file di testo con alcune attività."
 
 #: GTG/plugins/export/export_templates/description_simple.py:18
 msgid "A simple Web page that can be easily printed."
-msgstr ""
+msgstr "Una semplice pagina web che può essere facilemnte stampata."
 
 #: GTG/plugins/export/export_templates/description_simple.py:19
 msgid ""
 "A template to create a simple HTML page with some tasks that can be easily "
 "printed."
 msgstr ""
+"Un modello per la creazione di una semplice pagina HTML contenente alcune "
+"attività da stampare in maniera semplice."
 
 #: GTG/plugins/export/export_templates/description_statusrpt.py:18
 msgid "Status report"
@@ -85,7 +87,7 @@ msgstr "Modello non trovato"
 #: GTG/plugins/export/export.py:121
 #, python-format
 msgid "GTG could not generate the document: %s"
-msgstr ""
+msgstr "GTG non può generare il documento: %s"
 
 #: GTG/plugins/export/export.py:169
 msgid "Export the tasks currently listed"
@@ -218,6 +220,8 @@ msgid ""
 "%s seems to be installed on your system, but it does not provide a DBus "
 "interface which is required by the Tomboy/Gnote plugin in GTG."
 msgstr ""
+"%s sembra essere installato nel sistema, ma non fornisce una interfaccia "
+"DBus necessari a per il funzionamento del plugin Tomboy/Gnote in GTG."
 
 #: GTG/plugins/tomboy/tomboy.py:240
 msgid "That note does not exist!"
@@ -319,7 +323,7 @@ msgstr ""
 
 #: GTG/backends/backend_mantis.py:42
 msgid "MantisBT"
-msgstr ""
+msgstr "MantisBT"
 
 #: GTG/backends/backend_mantis.py:46
 msgid ""
@@ -336,10 +340,23 @@ msgid ""
 "subtasks...): your  changes will be preserved. This is useful to add  "
 "personal annotations to issue"
 msgstr ""
+"Questo backend consente l'importazione dei problemi segnalati su Mantis "
+"utilizzando un filtro prestabilito chiamato \"gtg\". Appena lo stato del bug "
+"cambia in Mantis, l'Attività in GTG viene aggiornata.\n"
+"Notare che si tratta di un backend in sola lettura. Questo significa che se "
+"si apre una delle attività importate e si cambia:\n"
+"  - titolo\n"
+"  - descrizione\n"
+"  - etichette\n"
+"i cambiamenti <b>verranno</b> annullati quando il problema associato sarà "
+"modificato. A parte a questo, si è liberi di impostare qualunque altro campo "
+"(data di inizio e scadenza, attività ausiliarie...) e i cambiamenti verranno "
+"mantenuti. Questa funzione è utile per aggiungere annotazioni personali ai "
+"bug"
 
 #: GTG/backends/backend_mantis.py:224
 msgid "Iss."
-msgstr ""
+msgstr "Prob."
 
 #: GTG/backends/backend_mantis.py:244 GTG/backends/backend_launchpad.py:324
 msgid "Reported by: "
@@ -347,7 +364,7 @@ msgstr "Segnalato da: "
 
 #: GTG/backends/backend_mantis.py:245
 msgid "Link to issue: "
-msgstr ""
+msgstr "Collegamento al problema: "
 
 #: GTG/backends/backend_evolution.py:69
 msgid "Evolution tasks"
@@ -797,31 +814,31 @@ msgstr "il prossimo anno"
 
 #: GTG/tools/dates.py:251
 msgid "Monday"
-msgstr ""
+msgstr "lunedì"
 
 #: GTG/tools/dates.py:252
 msgid "Tuesday"
-msgstr ""
+msgstr "martedì"
 
 #: GTG/tools/dates.py:253
 msgid "Wednesday"
-msgstr ""
+msgstr "mercoledì"
 
 #: GTG/tools/dates.py:254
 msgid "Thursday"
-msgstr ""
+msgstr "giovedì"
 
 #: GTG/tools/dates.py:255
 msgid "Friday"
-msgstr ""
+msgstr "venerdì"
 
 #: GTG/tools/dates.py:256
 msgid "Saturday"
-msgstr ""
+msgstr "sabato"
 
 #: GTG/tools/dates.py:257
 msgid "Sunday"
-msgstr ""
+msgstr "domenica"
 
 #: GTG/tools/dates.py:293
 msgid "Today"
@@ -859,7 +876,7 @@ msgstr "Tutte le etichette"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:65
 msgid "Just these tags:"
-msgstr ""
+msgstr "Solo queste etichette:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:69
 msgid "Tags to sync"
@@ -867,7 +884,7 @@ msgstr "Etichette da sincronizzare"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:71
 msgid "Tasks with these tags:"
-msgstr ""
+msgstr "Attività con queste etichette:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:76
 msgid "Username"
@@ -944,14 +961,14 @@ msgstr[1] "Sincronizza tutte le %d attività"
 #: GTG/gtk/backends_dialog/configurepanel.py:169
 #, python-format
 msgid "There is no task tagged %s"
-msgstr ""
+msgstr "Non ci sono attività con etichetta %s"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:171
 #, python-format
 msgid "Syncing a task tagged %s"
 msgid_plural "Syncing %d tasks tagged %s"
 msgstr[0] ""
-msgstr[1] ""
+msgstr[1] "Sincronizzazione di %d con etichetta %s"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:182
 msgid "Disable syncing"
@@ -967,11 +984,11 @@ msgstr "Questo è il backend predefinito"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:195
 msgid "Syncing is enabled."
-msgstr ""
+msgstr "Sincronizzazione abilitata."
 
 #: GTG/gtk/backends_dialog/configurepanel.py:197
 msgid "Syncing is <span color=\"red\">disabled</span>."
-msgstr ""
+msgstr "Sincronizzazione <span color=\"red\">disabilitata</span>."
 
 #: GTG/gtk/preferences.glade.h:1
 msgid "Getting Things GNOME! Preferences"
@@ -983,7 +1000,7 @@ msgstr "Avviare Getting Things GNOME all'accesso"
 
 #: GTG/gtk/preferences.glade.h:3
 msgid "<b>Startup</b>"
-msgstr ""
+msgstr "<b>Avvio</b>"
 
 #: GTG/gtk/preferences.glade.h:4
 msgid "Show description preview in the task list."
@@ -1031,25 +1048,29 @@ msgid ""
 msgid_plural ""
 "Deleting a task cannot be undone, and will delete the following tasks: "
 msgstr[0] ""
+"L'eliminazione di un'attività non può essere annullata. Verrà eliminata la "
+"seguente attività: "
 msgstr[1] ""
+"L'eliminazione di un'attività non può essere annullata. Verranno eliminate "
+"le seguenti attività: "
 
 #: GTG/gtk/delete_dialog.py:94
 msgid "Are you sure you want to delete this task?"
 msgid_plural "Are you sure you want to delete these tasks?"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Eliminare veramente questa attività?"
+msgstr[1] "Eliminare veramente queste attività?"
 
 #: GTG/gtk/delete_dialog.py:100
 msgid "Keep selected task"
 msgid_plural "Keep selected tasks"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Mantenere l'attività selezionata"
+msgstr[1] "Mantenere le attività selezionate"
 
 #: GTG/gtk/delete_dialog.py:103
 msgid "Permanently remove task"
 msgid_plural "Permanently remove tasks"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Rimuovi definitivamente l'attività"
+msgstr[1] "Rimuovi definitivamente le attività"
 
 #: GTG/gtk/delete_dialog.py:114
 #, python-format
@@ -1062,7 +1083,7 @@ msgstr ""
 
 #: GTG/gtk/preferences.py:38
 msgid "Click on a plugin name to view its description here."
-msgstr ""
+msgstr "Fare clic su un plugin per visualizzare la descrizione."
 
 #: GTG/gtk/browser/custominfobar.py:36
 #, python-format
@@ -1085,6 +1106,7 @@ msgstr ""
 #, python-format
 msgid "Cannot connect to DBus, I've disabled the <b>%s</b> backend."
 msgstr ""
+"Impossibile connettersi a DBus, è stato disabilito il backend <b>%s</b>."
 
 #: GTG/gtk/browser/custominfobar.py:105
 msgid "Configure backend"
@@ -1294,11 +1316,11 @@ msgstr ""
 
 #: GTG/gtk/browser/taskbrowser.glade.h:22
 msgid "_Report a Problem"
-msgstr ""
+msgstr "_Segnala un problema"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:23
 msgid "Report a problem to GTG developers"
-msgstr ""
+msgstr "Segnala un problema agli sviluppatori di GTG"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:24
 msgid "New Task"
@@ -1338,7 +1360,7 @@ msgstr "Informazioni su GTG!"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:36
 msgid "Copyright © 2008-2012 Lionel Dricot, Bertrand Rousseau"
-msgstr ""
+msgstr "Copyright © 2008-2012 Lionel Dricot, Bertrand Rousseau"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:37
 msgid ""
