--- a/po/ru.po
+++ b/po/ru.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-04-02 20:02+0200\n"
-"PO-Revision-Date: 2012-03-30 18:56+0000\n"
+"PO-Revision-Date: 2012-04-06 19:41+0000\n"
 "Last-Translator: DmDr <cardioexp@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -16,8 +16,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2012-04-03 04:55+0000\n"
-"X-Generator: Launchpad (build 15052)\n"
+"X-Launchpad-Export-Date: 2012-04-07 04:56+0000\n"
+"X-Generator: Launchpad (build 15060)\n"
 
 #: GTG/plugins/notification_area/notification_area.py:121
 msgid "_View Main Window"
@@ -796,7 +796,7 @@ msgstr "без даты"
 
 #: GTG/core/search.py:96
 msgid "notag"
-msgstr ""
+msgstr "без меток"
 
 #: GTG/core/task.py:55
 msgid "My new task"
@@ -816,7 +816,7 @@ msgstr "отложить"
 
 #: GTG/core/task.py:169
 msgid "start"
-msgstr ""
+msgstr "старт"
 
 #: GTG/core/task.py:175
 msgid "due"
@@ -968,7 +968,7 @@ msgstr[2] " минут"
 
 #: GTG/gtk/backends_dialog/addpanel.py:75
 msgid "Select synchronization service:"
-msgstr ""
+msgstr "Выберите сервис синхронизации"
 
 #: GTG/gtk/backends_dialog/addpanel.py:179
 msgid "Syncing is <span color=\"red\">disabled</span>"
@@ -984,7 +984,7 @@ msgstr[2] "Авторы"
 #: GTG/gtk/backends_dialog/__init__.py:286
 #, python-format
 msgid "Do you really want to remove the '%s' synchronization service?"
-msgstr ""
+msgstr "Вы действительно хотите удалить сервис синхронизации '%s'?"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:162
 msgid "Ready to start syncing"
@@ -1021,7 +1021,7 @@ msgstr "Разрешить синхронизацию"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:192
 msgid "This is the default synchronization service"
-msgstr ""
+msgstr "Сервис синхронизации по умолчанию"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:195
 msgid "Syncing is enabled."
@@ -1149,7 +1149,7 @@ msgstr ""
 
 #: GTG/gtk/browser/custominfobar.py:105
 msgid "Configure synchronization service"
-msgstr ""
+msgstr "Настроить сервис синхронизации"
 
 #: GTG/gtk/browser/custominfobar.py:106
 msgid "Ignore"
@@ -1210,7 +1210,7 @@ msgstr "Открыть задачу"
 
 #: GTG/gtk/browser/modifytags_dialog.py:38
 msgid "NewTag"
-msgstr ""
+msgstr "Новая метка"
 
 #: GTG/gtk/browser/__init__.py:35 GTG/gtk/browser/taskbrowser.glade.h:29
 #: GTG/gtk/editor/__init__.py:31
@@ -1515,15 +1515,15 @@ msgstr "Установить дату завершения"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:61
 msgid "Modify Tags..."
-msgstr ""
+msgstr "Изменить метки..."
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:1
 msgid "Modify Tags"
-msgstr ""
+msgstr "Изменить метки"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:2
 msgid "Add/Remove Tags"
-msgstr ""
+msgstr "Добавить/удалить метки"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:3
 msgid "Cancel"
@@ -1531,7 +1531,7 @@ msgstr "Отменить"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:4
 msgid "Enter the name of the tag(s) you wish to add or remove:"
-msgstr ""
+msgstr "Введите метку(и) для добавления или удаления:"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:5
 msgid "TagName"
@@ -1542,6 +1542,8 @@ msgid ""
 "Hint: you can add several tags by separating them with\n"
 "space. Place '!' before tags you want to remove."
 msgstr ""
+"Подсказка: вводите несколько меток, разделяя их\n"
+"пробелом. Перед удаляемыми метками введите '!'."
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:8
 msgid "Apply to subtasks"
