Launchpad automatic translations update.

--- a/po/ru.po
+++ b/po/ru.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-04-02 20:02+0200\n"
-"PO-Revision-Date: 2012-04-06 19:41+0000\n"
+"PO-Revision-Date: 2012-04-07 09:27+0000\n"
 "Last-Translator: DmDr <cardioexp@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2012-04-07 04:56+0000\n"
+"X-Launchpad-Export-Date: 2012-04-08 04:39+0000\n"
 "X-Generator: Launchpad (build 15060)\n"
 
 #: GTG/plugins/notification_area/notification_area.py:121
@@ -271,6 +271,9 @@ msgid ""
 "tag it with the tag you have chosen (you'll configure it later), and it will "
 "appear in GTG."
 msgstr ""
+"Этот сервис позволяет синхронизировать все или часть заметок Gnote с "
+"задачами GTG. Пометьте заметки, которые Вы желаете видеть в списке задач в "
+"GTG, какой-нибудь меткой (её можно настроить потом)."
 
 #: GTG/backends/backend_rtm.py:54
 msgid "Remember The Milk"
@@ -284,6 +287,12 @@ msgid ""
 "Note: This product uses the Remember The Milk API but is not endorsed or "
 "certified by Remember The Milk"
 msgstr ""
+"Этот сервис позволяет синхронизировать задачи в GTG с веб-сервисом "
+"RememberTheMilk:\n"
+"\t\thttp://rememberthemilk.com\n"
+"\n"
+"Предупреждение: Используется API сервиса Remember The Milk без его "
+"официального одобрения или сертификации"
 
 #: GTG/backends/backend_twitter.py:54
 msgid "Twitter"
@@ -304,6 +313,9 @@ msgid ""
 "your TODO list, just tag it with the tag you have chosen (you'll configure "
 "it later), and it will appear in GTG."
 msgstr ""
+"Этот сервис позволяет синхронизировать часть или все заметки Tomboy с GTG. "
+"Пометьте заметки Tomboy, которые Вы желаете видеть в списке задач в GTG, "
+"какой-нибудь меткой (её можно настроить потом)."
 
 #: GTG/backends/backend_mantis.py:42
 msgid "MantisBT"
@@ -324,6 +336,17 @@ msgid ""
 "subtasks...): your  changes will be preserved. This is useful to add  "
 "personal annotations to issue"
 msgstr ""
+"Этот сервис позволяет импортировать записи из Mantis с использованием "
+"стандартного фильтра 'gtg'. Если запись в Mantis изменяется, обновляется "
+"также и задача в GTG.\n"
+"Обратите внимание: этот сервис работает только на чтение. Это означает, что "
+"изменения внесенные в GTG в:\n"
+"  - название,\n"
+"  - описание,\n"
+"  - метки задачи\n"
+"<b>пропадут</b> при изменении связанной записи в Mantis. В то же время, "
+"изменения в других полях (дата начала и окончания, подзадачи, ...) будут "
+"сохранены. Этим можно пользоваться, чтобы делать различные заметки."
 
 #: GTG/backends/backend_mantis.py:224
 msgid "Iss."
@@ -372,6 +395,17 @@ msgid ""
 "subtasks...): your  changes will be preserved. This is useful to add  "
 "personal annotations to bug"
 msgstr ""
+"Этот сервис позволяет синхронизировать ошибки, назначенные Вам (или кому-"
+"то), в Launchpad с задачами GTG. Если в Launchpad описание ошибки "
+"изменяется, задача в GTG также обновляется.\n"
+"Обратите внимание: этот сервис работает только на чтение. Это означает, что "
+"изменения внесенные в GTG в:\n"
+"  - название,\n"
+"  - описание,\n"
+"  - метки задачи\n"
+"<b>пропадут</b> при изменении связанного описания ошибки. В то же время, "
+"изменения в других полях (дата начала и окончания, подзадачи, ...) будут "
+"сохранены. Этим можно пользоваться, чтобы делать различные заметки."
 
 #: GTG/backends/backend_launchpad.py:244
 msgid "Bug"
@@ -1133,6 +1167,8 @@ msgid ""
 "authentication data and has been disabled. To retry the login, re-enable the "
 "service."
 msgstr ""
+"Не удалось авторизоваться на сервисе синхронизации <b>%s</b>, сервис не "
+"доступен. Чтобы повторить авторизацию, отключите и повторно включите сервис."
 
 #: GTG/gtk/browser/custominfobar.py:40
 #, python-format
@@ -1140,12 +1176,16 @@ msgid ""
 "Due to a network problem, I cannot contact the <b>%s</b> synchronization "
 "service."
 msgstr ""
+"Из-за проблем с сетью, не возможно соединиться с сервисом синхронизации "
+"<b>%s</b>."
 
 #: GTG/gtk/browser/custominfobar.py:43
 #, python-format
 msgid ""
 "Cannot connect to DBus, I've disabled the <b>%s</b> synchronization service."
 msgstr ""
+"Нет соединения с DBus, поэтому сервис синхронизации <b>%s</b> не "
+"используется."
 
 #: GTG/gtk/browser/custominfobar.py:105
 msgid "Configure synchronization service"
