--- a/po/it.po
+++ b/po/it.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-04-02 20:02+0200\n"
-"PO-Revision-Date: 2012-04-01 17:22+0000\n"
-"Last-Translator: Radina Matic <radina.matic@gmail.com>\n"
+"PO-Revision-Date: 2012-04-10 20:56+0000\n"
+"Last-Translator: Luca Falavigna <dktrkranz@ubuntu.com>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2012-04-03 04:55+0000\n"
-"X-Generator: Launchpad (build 15052)\n"
+"X-Launchpad-Export-Date: 2012-04-11 04:39+0000\n"
+"X-Generator: Launchpad (build 15070)\n"
 
 #: GTG/plugins/notification_area/notification_area.py:121
 msgid "_View Main Window"
@@ -253,7 +253,7 @@ msgstr "più tardi"
 #: GTG/tests/test_dates.py:62 GTG/core/search.py:95 GTG/tools/dates.py:40
 #: GTG/tools/dates.py:52
 msgid "someday"
-msgstr ""
+msgstr "prima o poi"
 
 #: GTG/backends/backend_identica.py:54
 msgid "Identi.ca"
@@ -274,6 +274,10 @@ msgid ""
 "tag it with the tag you have chosen (you'll configure it later), and it will "
 "appear in GTG."
 msgstr ""
+"Questo servizio permette di sincronizzare tutte o parte delle tue attività "
+"di Gnote su GTG. Se ritenessi comodo avere una delle tue note nella tua "
+"lista delle attività da compiere, marcala con il tag prescelto (da "
+"configurare successivamnete), e la nota apparirà in GTG."
 
 #: GTG/backends/backend_rtm.py:54
 msgid "Remember The Milk"
@@ -287,6 +291,9 @@ msgid ""
 "Note: This product uses the Remember The Milk API but is not endorsed or "
 "certified by Remember The Milk"
 msgstr ""
+"Questo servizio sincronizza le tue attività con il servizio online "
+"RememberTheMilk:\n"
+"\t\thttp://rememberthemilk.com"
 
 #: GTG/backends/backend_twitter.py:54
 msgid "Twitter"
@@ -307,6 +314,10 @@ msgid ""
 "your TODO list, just tag it with the tag you have chosen (you'll configure "
 "it later), and it will appear in GTG."
 msgstr ""
+"Questo servizio permette di sincronizzare tutte o parte delle tue attività "
+"di Tomboy su GTG. Se ritenessi comodo avere una delle tue note nella tua "
+"lista delle attività da compiere, marcala con il tag prescelto (da "
+"configurare successivamnete), e la nota apparirà in GTG."
 
 #: GTG/backends/backend_mantis.py:42
 msgid "MantisBT"
@@ -327,6 +338,21 @@ msgid ""
 "subtasks...): your  changes will be preserved. This is useful to add  "
 "personal annotations to issue"
 msgstr ""
+"Questo servizio di sincronizzazione ti permette di importare le segnalazioni "
+"presenti su Mantis per mezzo di un filtro prestabilito chiamato 'gtg'. Non "
+"appena la segnalazione è aggiornata su Mantis, l'attività in GTG viene "
+"aggiornata.\n"
+"Nota bene: questo è un servizio di sincronizzazione in sola lettura, ciò "
+"significa che aprendo una delle attività importate e cambiando una tra le "
+"seguenti:\n"
+"  - titolo\n"
+"  - descrizione\n"
+"  - tag\n"
+"le tue modifiche <b>saranno rimosse</b> non appena la segnalazione "
+"corrispondente sarà modifica. Ad esclusione di questi campi, è possibile "
+"impostare qualsiasi altro campo (data di inizio/fine, subattività...): le "
+"modifiche locali saranno mantenute. Questo è particolarmente utile per "
+"aggiungere annotazioni personali alla segnalazione"
 
 #: GTG/backends/backend_mantis.py:224
 msgid "Iss."
@@ -448,6 +474,19 @@ msgid ""
 "A task might be composed of multiple subtasks that appear as links in the "
 "task description. Simply click on the following link to open the subtask:"
 msgstr ""
+"Benvenuto in Getting Things Gnome!, il tuo nuovo gestore di attivitò.\n"
+"\n"
+"In GTG, tutto è un'attività. Dalla costruzione di un ponte sull'Oceano "
+"Pacifico, al cambiare una lampadina o organizzare un ricevimento. L'attività "
+"viene salvata automaticamente durante la modifica.\n"
+"\n"
+"Non appena si è soddisfatti con una data attività, è sufficiente premere il "
+"tasto &quot;Marca come completata&quot;. Se l'attività non è più rilevante, "
+"è sufficiente premere il tasto &quot;Scarta&quot;.\n"
+"\n"
+"Un'attività può essere composta da più subattività, che appaiono come "
+"collegamenti nella descrizione dell'attività. Cliccando su uno dei "
+"collegamenti, la relativa subattività viene aperta."
 
 #: GTG/core/firstrun_tasks.py:19
 msgid ""
@@ -661,7 +700,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:107
 msgid "Learn how to use the Quick Add Entry"
-msgstr ""
+msgstr "Impara come usare l'Aggiunta Veloce"
 
 #: GTG/core/firstrun_tasks.py:108
 msgid ""
@@ -703,19 +742,19 @@ msgstr ""
 
 #: GTG/core/search.py:86
 msgid "not"
-msgstr ""
+msgstr "non"
 
 #: GTG/core/search.py:87
 msgid "or"
-msgstr ""
+msgstr "o"
 
 #: GTG/core/search.py:88
 msgid "after"
-msgstr ""
+msgstr "dopo il"
 
 #: GTG/core/search.py:89
 msgid "before"
-msgstr ""
+msgstr "prima del"
 
 #: GTG/core/search.py:90 GTG/tools/dates.py:238
 msgid "today"
@@ -727,11 +766,11 @@ msgstr "domani"
 
 #: GTG/core/search.py:92
 msgid "nodate"
-msgstr ""
+msgstr "nessuna data"
 
 #: GTG/core/search.py:96
 msgid "notag"
-msgstr ""
+msgstr "nessun tag"
 
 #: GTG/core/task.py:55
 msgid "My new task"
@@ -751,7 +790,7 @@ msgstr "posticipa"
 
 #: GTG/core/task.py:169
 msgid "start"
-msgstr ""
+msgstr "inizio"
 
 #: GTG/core/task.py:175
 msgid "due"
@@ -768,7 +807,7 @@ msgstr "Attività senza etichette"
 
 #: GTG/core/treefactory.py:102 GTG/gtk/browser/browser.py:1561
 msgid "Search"
-msgstr ""
+msgstr "Cerca"
 
 #: GTG/tools/dates.py:242
 msgid "next week"
@@ -862,7 +901,7 @@ msgstr "Nome utente"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:82
 msgid "Service URL"
-msgstr ""
+msgstr "Indirizzo URL del servizio"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:86
 msgid "Import tasks from @ replies "
@@ -900,7 +939,7 @@ msgstr[1] " minuti"
 
 #: GTG/gtk/backends_dialog/addpanel.py:75
 msgid "Select synchronization service:"
-msgstr ""
+msgstr "Seleziona il servizio di sincronizzazione:"
 
 #: GTG/gtk/backends_dialog/addpanel.py:179
 msgid "Syncing is <span color=\"red\">disabled</span>"
@@ -915,7 +954,7 @@ msgstr[1] "Autori"
 #: GTG/gtk/backends_dialog/__init__.py:286
 #, python-format
 msgid "Do you really want to remove the '%s' synchronization service?"
-msgstr ""
+msgstr "Si desidera davvero rimuovere il servizio di sincronizzazione '%s'?"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:162
 msgid "Ready to start syncing"
@@ -937,7 +976,7 @@ msgstr "Non ci sono attività con etichetta %s"
 #, python-format
 msgid "Syncing a task tagged %s"
 msgid_plural "Syncing %d tasks tagged %s"
-msgstr[0] ""
+msgstr[0] "Sincronizzazione"
 msgstr[1] "Sincronizzazione di %d con etichetta %s"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:182
@@ -950,7 +989,7 @@ msgstr "Abilita sincronizzazione"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:192
 msgid "This is the default synchronization service"
-msgstr ""
+msgstr "Questo è il servizio di sincronizzazione predefinito"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:195
 msgid "Syncing is enabled."
@@ -986,7 +1025,7 @@ msgstr "<b>Esplora attività</b>"
 
 #: GTG/gtk/preferences.glade.h:7
 msgid "Check spelling"
-msgstr "Controllare l'ortografia"
+msgstr "Controlla l'ortografia"
 
 #: GTG/gtk/preferences.glade.h:8
 msgid "<b>Task Editor</b>"
@@ -994,7 +1033,7 @@ msgstr "<b>Editor attività</b>"
 
 #: GTG/gtk/preferences.glade.h:9
 msgid "General"
-msgstr ""
+msgstr "Informazioni generali"
 
 #: GTG/gtk/preferences.glade.h:10
 msgid "Active _Plugins:"
@@ -1062,6 +1101,9 @@ msgid ""
 "authentication data and has been disabled. To retry the login, re-enable the "
 "service."
 msgstr ""
+"Il servizio di sincronizzazione <b>%s</b> non ha potuto effeettuare "
+"l'autenticazione con le credenziali fornite ed è stato disabilitato. "
+"Riabilitare il servizio per ripetere l'autenticazione."
 
 #: GTG/gtk/browser/custominfobar.py:40
 #, python-format
@@ -1069,16 +1111,20 @@ msgid ""
 "Due to a network problem, I cannot contact the <b>%s</b> synchronization "
 "service."
 msgstr ""
+"Non è possibile contattare il servizio di sincronizzazione <b>%s</b> a causa "
+"di un problema di rete."
 
 #: GTG/gtk/browser/custominfobar.py:43
 #, python-format
 msgid ""
 "Cannot connect to DBus, I've disabled the <b>%s</b> synchronization service."
 msgstr ""
+"Impossibile connettersi a Dbus, il servizio di sincronizzazione <b>%s</b> è "
+"stato disabilitato."
 
 #: GTG/gtk/browser/custominfobar.py:105
 msgid "Configure synchronization service"
-msgstr ""
+msgstr "Configura il servizio di sincronizzazione"
 
 #: GTG/gtk/browser/custominfobar.py:106
 msgid "Ignore"
@@ -1130,15 +1176,15 @@ msgstr[1] "%(tasks)d attività da completare"
 
 #: GTG/gtk/browser/browser.py:1559
 msgid "Add Task"
-msgstr ""
+msgstr "Aggiungi attività"
 
 #: GTG/gtk/browser/browser.py:1560
 msgid "Open Task"
-msgstr ""
+msgstr "Apri attività"
 
 #: GTG/gtk/browser/modifytags_dialog.py:38
 msgid "NewTag"
-msgstr ""
+msgstr "Nuova attività"
 
 #: GTG/gtk/browser/__init__.py:35 GTG/gtk/browser/taskbrowser.glade.h:29
 #: GTG/gtk/editor/__init__.py:31
@@ -1151,7 +1197,7 @@ msgstr "Segna l'attività selezionata come completata"
 
 #: GTG/gtk/browser/__init__.py:37 GTG/gtk/editor/__init__.py:32
 msgid "Mark as not Done"
-msgstr ""
+msgstr "Marca come non completata"
 
 #: GTG/gtk/browser/__init__.py:38 GTG/gtk/browser/__init__.py:42
 msgid "Mark the selected task as to be done"
@@ -1200,11 +1246,11 @@ msgstr "Mostra questa etichetta nella scaletta di lavoro"
 
 #: GTG/gtk/browser/__init__.py:50
 msgid "You can create, open or filter your tasks here"
-msgstr ""
+msgstr "Qui puoi creare, aprire o filtrare le tue attività"
 
 #: GTG/gtk/browser/__init__.py:51
 msgid "Clear"
-msgstr ""
+msgstr "Cancella"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:1
 msgid "Getting Things Gnome!"
@@ -1272,7 +1318,7 @@ msgstr "_Aiuto"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:18
 msgid "Get _Help Online"
-msgstr ""
+msgstr "Ottieni _Aiuto"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:19
 msgid "Open GTG documentation in your web browser"
@@ -1280,11 +1326,11 @@ msgstr "Aprire la documentazione di GTG nel browser web"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:20
 msgid "_Translate GTG"
-msgstr ""
+msgstr "_Traduci GTK"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:21
 msgid "Help to translate GTG into your language"
-msgstr ""
+msgstr "Contribuisci alla traduzione di GTG nella tua lingua"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:22
 msgid "_Report a Problem"
@@ -1417,7 +1463,7 @@ msgstr "Pr_esto"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:54
 msgid "_someday"
-msgstr ""
+msgstr "_prima o poi"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:55
 msgid "_clear due date"
@@ -1445,15 +1491,15 @@ msgstr "Imposta data di scadenza"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:61
 msgid "Modify Tags..."
-msgstr ""
+msgstr "Modifica i tag..."
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:1
 msgid "Modify Tags"
-msgstr ""
+msgstr "Modifica i tag"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:2
 msgid "Add/Remove Tags"
-msgstr ""
+msgstr "Aggiungi o rimuovi i tag"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:3
 msgid "Cancel"
@@ -1461,7 +1507,7 @@ msgstr "Annulla"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:4
 msgid "Enter the name of the tag(s) you wish to add or remove:"
-msgstr ""
+msgstr "Inserire il nome dei tag da aggiungere o rimuovere:"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:5
 msgid "TagName"
@@ -1472,6 +1518,8 @@ msgid ""
 "Hint: you can add several tags by separating them with\n"
 "space. Place '!' before tags you want to remove."
 msgstr ""
+"Suggerimento: puoi aggiungere diversi tag separandoli con uno\n"
+"spazio. Inserisci '!' prima dei tag che desideri rimuovere."
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:8
 msgid "Apply to subtasks"
@@ -1523,15 +1571,15 @@ msgstr "Segna questa attività come da non completare più"
 
 #: GTG/gtk/editor/__init__.py:40
 msgid "Permanently remove this task"
-msgstr "Rimuove completamente questa attività"
+msgstr "Rimuovi completamente questa attività"
 
 #: GTG/gtk/editor/__init__.py:41
 msgid "Insert a subtask in this task"
-msgstr "Inserisce un'attività ausiliaria in questa attività"
+msgstr "Inserisci un'attività ausiliaria in questa attività"
 
 #: GTG/gtk/editor/__init__.py:42
 msgid "Insert a tag in this task"
-msgstr "Inserisce un'etichetta in questa attività"
+msgstr "Aggiungi un'etichetta a questa attività"
 
 #: GTG/gtk/editor/taskeditor.glade.h:1
 msgid "Task"
