--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,6 +13,7 @@
       * added start: which has the same meaning as defer:
     * Automatic restore a backup XML file if the original XML file could not be loaded
     * Backends were renamed to Synchronization Services, by Anant Gupta
+    * Reimplement the tag context menu as a widget, in order to - hopefully - be able to implement an enhanced context menu with, for instance, a color picker.
 
 2012-02-13 Getting Things GNOME! 0.2.9
     * Big refractorization of code, now using liblarch
